css/style.css
#vis {
    width: 1024px;
    height: 500px;
}

#grid {
    width: 1024px;
    padding: 10px;
    font-family: serif;
    font-size: 13px;
}

#header {
    font-size: 14px;
    color: gray;
    font-family: serif;
}

#name {
    font-size: 13px;
    color: gray;
    font-family: serif;
}

#description {
    font-size: 14px;
    margin: 20px;
    width: 940px;
}

svg {
  font-size: 13px;
}

th {
  text-align: left;
  background-color: #F0F0F0;
}

table tr {
  border: 1px solid gray;
  padding: 1px;
}

.title {
  font-size: 22px;
  color: black;
  font-weight: bold;
}

.row, .header, .cell { height: 18px; }
.row, .header { clear: left; border: 1px solid gray;}
.header { font-weight: bold; background-color: #F0F0F0; }
.cell { float: left; overflow: hidden; white-space: nowrap; }
.col-0 { width: 130px; }
.col-1 { width: 60px; }
.col-2 { width: 140px; }
.col-3 { width: 140px; }
.col-4 { width: 200px; }
.col-5 { width: 70px; }
.col-6 { width: 60px; }
.col-7 { width: 90px; }

.foreground path {
  fill: none;
  stroke-opacity: .5;
  stroke-width: 1.5px;
}

.foreground path.fade {
  stroke: #000000;
  stroke-opacity: .05;
}

.legend {
  font-size: 14px;
  font-style: oblique;
}

.legend line {
  stroke-width: 2px;
}

.USA {
  stroke: #E41A1C;
}

.IRQ {
  stroke: #377EB8;
}

.IND {
  stroke: #4DAF4A;
}

.PAK {
  stroke: #FF00BF;
}

.NLD {
  stroke: #40FF00;
}



.brush .extent {
  fill-opacity: .3;
  stroke: #fff;
  shape-rendering: crispEdges;
}

.axis line, .axis path {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.axis text {
  text-shadow: 0 1px 0 #fff;
  cursor: move;
}

body {
  font: 300 36px "Helvetica Neue";
  height: 640px;
  margin: 20px;
  overflow: hidden;
  position: relative;
  width: 960px;
}

a:link, a:visited {
  color: #777;
  text-decoration: none;
}

a:hover {
  color: #666;
}

blockquote {
  margin: 0;
}

blockquote:before {
  content: "â€œ";
  position: absolute;
  left: -.4em;
}

blockquote:after {
  content: "â€";
  position: absolute;
}

body > ul {
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 64px;
}

h1, h2, h3 {
  font-weight: inherit;
  margin: 0;
}

h2, h3 {
  text-align: right;
  font-size: inherit;
  position: absolute;
  bottom: 0;
  right: 0;
}

h2 {
  font-size: 24px;
  position: absolute;
}

h3 {
  bottom: -20px;
  font-size: 18px;
}

.invert {
  background: #1f1f1f;
  color: #dcdccc;
}

.invert h2, .invert h3 {
  color: #7f9f7f;
}

.string, .regexp {
  color: #f39;
}

.keyword {
  color: #00c;
}

.comment {
  color: #777;
  font-style: oblique;
}

.number {
  color: #369;
}

.class, .special {
  color: #1181B8;
}

body > svg {
  position: absolute;
  top: 135px;
  left: -200px;
}

#map img {
  position: absolute;
  top: 0px;
  left: 850px;
}

